build/log/idf_py_stderr_output_2735963
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:180:1: error: expected identifier or '(' before '}' token
  180 | }
      | ^
/home/seanshea/esp_32_projects/clock-proto-1.0/main/main.c:20:20: warning: 'BASE_PATH' defined but not used [-Wunused-variable]
   20 | static const char *BASE_PATH = "/sdcard";
      |                    ^~~~~~~~~
make[2]: *** [esp-idf/main/CMakeFiles/__idf_main.dir/build.make:76: esp-idf/main/CMakeFiles/__idf_main.dir/main.c.obj] Error 1
make[1]: *** [CMakeFiles/Makefile2:4656: esp-idf/main/CMakeFiles/__idf_main.dir/all] Error 2
make: *** [Makefile:136: all] Error 2
